# sirius

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
sirius-macros/: Cargo.toml
sirius-macros/src/: derive.rs  lib.rs
src/: impls.rs  lib.rs  macros.rs  main.rs
tests/: macro_tests.rs
